youtube video responsiveness

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -59,19 +59,20 @@
             react/redux, helping with design, and bug-fixing, in addtion to many
             other coding tasks.
           </p>
-          <iframe
+          <div class="video-container"><iframe
             width="560"
             height="315"
             src="https://www.youtube.com/embed/FvFjSsddojQ"
             frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
-          ></iframe>
+          ></iframe></div>
           <ul class="actions stacked">
             <li>
               <a
                 href="https://clubhandbook.netlify.com/"
                 target="_blank"
+                id="cap-button" !important
                 class="button"
                 >See the Website</a
               >
