--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -89,9 +89,9 @@
         class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"
       >
         <div class="content">
-          <h2>Lambda Notes</h2>
+          <h2>Lambda Times</h2>
           <p>
-            Under Construction
+            Under Construction. An Los Angeles Times-esque web page with different articles that you can filter through.
           </p>
           <ul class="actions stacked">
             <li><a href="#" class="button">Learn More</a></li>
@@ -103,13 +103,13 @@
       </section>
 
       <!-- Four -->
-      <section
+      <!-- <section
         class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
       >
         <div class="content">
-          <h2>Lambda Times</h2>
+          <h2>Lambda Notes</h2>
           <p>
-           Under Construction. An Los Angeles Times-esque web page with different articles that you can filter through. 
+           Under Construction.  
           </p>
           <ul class="actions stacked">
             <li><a href="#" class="button">Learn More</a></li>
@@ -118,7 +118,7 @@
         <div class="image">
           <img src="images/andrew-cengiz-photoshop-tree.jpg" alt="" />
         </div>
-      </section>
+      </section> -->
 
       <!-- Five -->
       <section class="wrapper style1 align-center">
